# ghost-swap

./: .gitignore  download_models.sh  inference.py  preprocess_dataset.py  pyproject.toml  requirements.txt  train.py
coordinate_reg/: image_infer.py
dataset/: __init__.py  face_dataset.py
loss/: __init__.py  discriminator_loss.py  generator_loss.py  hinge_loss.py
models/: pix2pix_model.py
models/networks/: generator.py
network/: AEI_Net.py  __init__.py  ghost.py  utils.py
network/aad_generator/: __init__.py  aad_generator.py  aad_res_block.py
network/attribute_encoder/: __init__.py  multi_attribute_encoder.py  multi_attribute_encoder_resnet.py
network/fan/: __init__.py  coord_conv.py  fan.py
network/multi_scale_discriminator/: __init__.py
src/ghost/dataset/: __init__.py  datamodule.py  dataset.py
src/ghost/image_processor/: face.py  landmark.py
src/ghost/loss/: __init__.py  aei_loss.py  eye_loss.py  gan_loss.py  hear_loss.py
src/ghost/network/: AADGenerator.py  FAN.py  Ghost.py  MultiLevelAttributesEncoder.py  MultiScaleDiscriminator.py  __init__.py
src/ghost/processor/: __init__.py  base.py  face.py  face_detector.py  face_embedder.py  face_masker.py
utils/inference/: core.py  face_detector.py  image_processing.py  masks.py  util.py  video_processing.py
utils/training/: Dataset.py
